[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/doorBody.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.258824, 0.0313726, 0.0313726, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1.4298, 1 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("hinge:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -0.189028, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("hinge:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.104512, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("hinge:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.311071, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "close"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("hinge:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("hinge:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -90, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("hinge:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}

[sub_resource type="Animation" id=6]
resource_name = "doorAnim"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("hinge:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("hinge:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("hinge:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}

[sub_resource type="ConcavePolygonShape" id=4]

[node name="movingDoor" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0249364, 0 )

[node name="hinge" type="Spatial" parent="."]
transform = Transform( 0.999984, -0.00542317, -0.00175562, 0.00542916, 0.99998, 0.00317535, 0.00180614, -0.00330901, 0.962466, 0, 2.553, 1.433 )

[node name="door" type="MeshInstance" parent="hinge"]
transform = Transform( 0.400451, 0, 0, 0, 3.68126, 0, 0, 0, 2.14972, 0, 0, 2.18263 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="doorBody" type="StaticBody" parent="hinge/door"]
unique_name_in_owner = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="hinge/door/doorBody"]
transform = Transform( 1, 0, 0, 0, 0.706064, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="doorAnim" type="AnimationPlayer" parent="hinge"]
unique_name_in_owner = true
root_node = NodePath("../..")
anims/RESET = SubResource( 5 )
anims/close = SubResource( 7 )
anims/doorAnim = SubResource( 6 )

[node name="doorArea" type="Area" parent="."]
transform = Transform( 0.0446941, 0.000528925, -4.11183, 8.99955e-08, 0.39375, -4.87437e-05, 16.5455, -1.34795e-06, 0.0393418, 0, 0.294897, 3.53237 )

[node name="doorCollision" type="CollisionShape" parent="doorArea"]
transform = Transform( 1, 0, 0, 0, 18.1082, 0, 0, 0, 10.6631, 0, 0, 0 )
shape = SubResource( 4 )

[connection signal="body_entered" from="doorArea" to="hinge/door/doorBody" method="_on_doorArea_body_entered"]
[connection signal="body_exited" from="doorArea" to="hinge/door/doorBody" method="_on_doorArea_body_exited"]
